# Dot-files

./: .stignore  dot_gitconfig  dot_wakatime.cfg
alacritty/: alacritty.toml
caelestia/: apps.sqlite  sequences.txt  shell.json
caelestia/cli/cli-backup/scripts/caelestia/watcher/: config.py  generator.py  pyproject.toml  watcher.py
caelestia/cli/cli-backup/scripts/caelestia/watcher/watcher.egg-info/: requires.txt
dot_zshrc/: dot_zcompdump  symlink_dot_zshenv  symlink_dot_zshrc
dot_zshrc/plugins/: symlink_autosuggestions  symlink_fzf-tab
fastfetch/: config-compact.jsonc  config-pocemon.jsonc
hypr/: hypridle.conf  hyprland.conf  hyprland.conf.bak  hyprlock.conf
hypr/UserConfigs/: 01-UserDefaults.conf  DesktopRules.conf  (+9 more)
hyprpanel/: config.json
kitty/: current-theme.conf  kitty.conf
private_dot_config/: starship.toml
private_dot_config/caelestia/cli/scripts/: executable_hotkey.sh  pyproject.toml  shell_config.py  shell_manager.py
private_dot_config/caelestia/cli/scripts/caelestia/dnd/: executable_script.sh
private_dot_config/caelestia/cli/scripts/caelestia/lock/: __init__.py
private_dot_config/caelestia/cli/scripts/caelestia/panels/: executable_script.sh
private_dot_config/caelestia/cli/scripts/caelestia/rofi/: executable_script.sh
private_dot_config/caelestia/cli/scripts/caelestia/shell/: executable_script.sh
private_dot_config/caelestia/cli/scripts/caelestia/watcher/: config.py  executable_script.sh  formatter.py  generator.py  watcher.py
private_dot_config/caelestia/cli/scripts/hyprland/decorate/: __init__.py
private_dot_config/caelestia/cli/scripts/hyprland/hyprapps/: executable_script.sh
private_dot_config/caelestia/cli/scripts/hyprland/idle/: __init__.py  executable_script.sh
private_dot_config/caelestia/cli/scripts/hyprland/keyhint/: executable_script.sh
private_dot_config/caelestia/cli/scripts/hyprland/power/: executable_script.sh
private_dot_config/caelestia/cli/scripts/hyprland/shadow/: __init__.py  executable_script.sh
private_dot_config/caelestia/cli/scripts/media/: __init__.py
private_dot_config/caelestia/cli/scripts/media/airplane/: executable_script.sh
private_dot_config/caelestia/cli/scripts/media/brightness/: __init__.py  executable_script.sh
private_dot_config/caelestia/cli/scripts/media/microphone/: __init__.py
private_dot_config/caelestia/cli/scripts/media/player/: __init__.py
private_dot_config/caelestia/cli/scripts/media/screenrecord/: executable_core.sh  executable_script.sh
private_dot_config/caelestia/cli/scripts/media/screenshot/: executable_core.sh  executable_script.sh
private_dot_config/caelestia/cli/scripts/peripherals/bluetooth/: __init__.py  executable_script.sh
private_dot_config/caelestia/cli/scripts/peripherals/clean/: __init__.py  executable_script.sh
private_dot_config/caelestia/cli/scripts/peripherals/keyboard/: __init__.py  executable_script.sh
private_dot_config/caelestia/cli/scripts/peripherals/mouse/: __init__.py
private_dot_config/caelestia/cli/scripts/peripherals/touchscreen/: executable_script.sh
private_dot_config/caelestia/cli/scripts/python/: Rofi_Animations.py  Rofi_Clipboard.py  Rofi_EmojiPicker.py  Rofi_FastSearch.py  Rofi_KeyHints.py  Rofi_Links.py  Rofi_Nixos.py  Rofi_Peripherals.py  Rofi_Radio.py  Rofi_Snapcode.py  Rofi_Wallpapers.py  links.json  pyproject.toml
private_dot_config/caelestia/cli/scripts/python/keyhints/: Rofi.txt  Vscode.txt  Yandex-Music.txt  Zen.txt
private_dot_config/caelestia/cli/scripts/python/keyhints/cache/: # Обозначения.cache  Hyprland.cache  Obsidian.cache  Telegram.cache  Yazi.cache  themes.cache
private_dot_config/caelestia/cli/server/: __init__.py  logger.py  pyproject.toml
private_dot_faces/: dot_face  dot_face_1  dot_face_11  dot_face_13  dot_face_2  dot_face_3  dot_face_4  dot_face_6  dot_face_7
quickshell/: qml_color.json
rofi/: .current_wallpaper  animations.rasi  banner.rasi  clipboard.rasi  colors.rasi  config-clipboard.rasi  config-edit.rasi  config-emoji.rasi  config-keybinds.rasi  config-rofi-theme.rasi  config.rasi  custom-config.rasi  emoji.rasi  keyhints-menu.rasi  keyhints.rasi  radio-menu.rasi  radio.rasi  search.rasi  template-config.rasi  wallpaper.rasi
waybar/: Modules  ModulesCustom  ModulesGroups  ModulesWorkspaces  config  style.css
(+369 files in other folders)
