[tool.setuptools]
py-modules = ["logger", "consumer"]

[project]
name = "consumer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbus-fast>=3.1.2",
    "psutil>=7.1.3",
]

[project.scripts]
consumer = "consumer:app"
