[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["config", "formatter", "watcher", "generator"]

[tool.setuptools.packages.find]
where = ["."]

[tool.uv.workspace]
members = ["watcher"]

[project]
name = "watcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "scipy>=1.16.3",
    "watchdog>=6.0.0",
]

[project.scripts]
watcher = "watcher:app"
